@@ -18,8 +18,9 @@
 
 #include <posix_test.h>
 
-sem_t sem;
-pthread_t child_tid;
+#define SEM_NAME "/shared-sem"
+static sem_t sem, *named_sem;
+static pthread_t child_tid;
 
 void *child(void *cookie)
 {
@@ -38,6 +39,51 @@ void *child(void *cookie)
     return cookie;
 }
 
+void *child_named(void *cookie)
+{
+    sem_t *loc_named_sem = sem_open(SEM_NAME, O_CREAT | O_EXCL, 0, 0);
+
+    TEST_ASSERT(loc_named_sem == SEM_FAILED && errno == EEXIST);
+
+    loc_named_sem = sem_open(SEM_NAME, 0);
+
+    TEST_ASSERT(loc_named_sem == named_sem);
+    
+    TEST_MARK();
+
+    TEST_ASSERT_OK(sem_wait(named_sem));
+
+    TEST_MARK();
+
+    TEST_ASSERT_OK(sem_unlink(SEM_NAME));
+
+    /* named semaphore is still valid after a call to sem_unlink. */
+    TEST_ASSERT(sem_trywait(named_sem) == -1 && errno == EAGAIN);
+
+    loc_named_sem = sem_open(SEM_NAME, O_CREAT | O_EXCL, 0, 0);
+
+    TEST_ASSERT(loc_named_sem != SEM_FAILED && loc_named_sem != named_sem);
+    
+    TEST_ASSERT_OK(sem_close(named_sem));
+    TEST_ASSERT_OK(sem_close(named_sem)); /* named_sem is also opened by root
+                                             thread */
+
+    TEST_ASSERT(sem_trywait(named_sem) == -1 && errno == EINVAL);
+
+    TEST_ASSERT(sem_close(named_sem) == -1);
+
+    TEST_ASSERT(sem_trywait(loc_named_sem) == -1 && errno == EAGAIN);
+
+    TEST_ASSERT_OK(sem_close(loc_named_sem));
+
+    TEST_ASSERT(sem_close(loc_named_sem) == -1);
+
+    TEST_ASSERT(sem_trywait(loc_named_sem) == -1 && errno == EINVAL);
+
+    TEST_ASSERT_OK(sem_unlink(SEM_NAME));
+
+    TEST_ASSERT(sem_open(SEM_NAME, 0) == SEM_FAILED && errno == ENOENT);
+}
 
 void *root_thread(void *cookie)
 {
@@ -46,8 +92,6 @@ void *root_thread(void *cookie)
     int value;
     
     TEST_START(0);
-
-    memset(&sem, 0, sizeof(sem));
 
     TEST_ASSERT(sem_wait(&sem) == -1 && errno == EINVAL);
 
@@ -91,10 +135,37 @@ void *root_thread(void *cookie)
     
     TEST_ASSERT(sem_getvalue(&sem, &value) == 0 && value == SEM_VALUE_MAX);
 
+    named_sem = sem_open(SEM_NAME, 0);
+
+    TEST_ASSERT(named_sem == SEM_FAILED && errno == ENOENT);
+
+    named_sem = sem_open(SEM_NAME, O_CREAT, 0, 0);
+
+    TEST_ASSERT(named_sem != SEM_FAILED && named_sem != &sem);
+    
+    TEST_ASSERT_OK(pthread_attr_init(&attr));
+    TEST_ASSERT_OK(pthread_attr_setname_np(&attr, "child_named"));
+    TEST_ASSERT_OK(pthread_create(&child_tid, &attr, child_named, &attr));
+    TEST_ASSERT_OK(pthread_attr_destroy(&attr));
+    
+    TEST_ASSERT_OK(sched_yield());
+
+    TEST_MARK();
+
+    TEST_ASSERT_OK(sem_post(named_sem));
+
+    TEST_ASSERT_OK(sched_yield());
+
+    TEST_ASSERT_OK(pthread_join(child_tid, &child_result) &&
+                   child_result == (void *) &attr);
+
     TEST_CHECK_SEQUENCE(SEQ("child", 1),
                         SEQ("root", 1),
                         SEQ("child", 1),
                         SEQ("root", 1),
+                        SEQ("child_named", 1),
+                        SEQ("root", 1),
+                        SEQ("child_named", 1),
                         END_SEQ);
 
     TEST_FINISH();
