@@ -37,6 +37,7 @@
 #define PSE51_MQ_MAGIC          PSE51_MAGIC(09)
 #define PSE51_MQD_MAGIC         PSE51_MAGIC(0A)
 #define PSE51_INTR_MAGIC        PSE51_MAGIC(0B)
+#define PSE51_NAMED_SEM_MAGIC   PSE51_MAGIC(0C)
 
 #define PSE51_MIN_PRIORITY      FUSION_LOW_PRIO
 #define PSE51_MAX_PRIORITY      FUSION_HIGH_PRIO
