@@ -21,23 +21,22 @@ typedef struct pse51_node {
     char name[PSE51_MAXNAME];
 } pse51_node_t;
 
-#define pse51_ref_p(node) ((node)->refcount)
-
 int pse51_reg_pkg_init(unsigned objects_count, unsigned maxfds);
 
 void pse51_reg_pkg_cleanup(void);
 
 
-/* Get an existing node: oflags are _open style flags. If error is 0 and *nodep
-   is NULL, then a new node should be added with node_add*. */
+/* Get an existing node: oflags are POSIX open style flags.
+   If 0 is returned and (*nodep) is NULL, then a new node should be added
+   with node_add*. */
 int pse51_node_get(pse51_node_t **nodep,
                    const char *name,
                    unsigned long magic,
                    long oflags);
 
-/* bind a node : use node_add for simple objects, node_add_start and
-   node_add_finished for objects which need to be initialized outside of any
-   critical sections. */
+/* bind a node : use node_add for simple objects (eg. sem_open), node_add_start
+   and node_add_finished for objects which need to be initialized outside of any
+   critical sections (eg. mq_open). */
 int pse51_node_add(pse51_node_t *node, const char *name, unsigned magic);
 
 int pse51_node_add_start(pse51_node_t *node,
@@ -49,13 +48,18 @@ void pse51_node_add_finished(pse51_node_t *node, int error);
 
 /* Any successful call to node_get or node_add need to be paired with a call
    node_put before a node may be unlinked. */
-void pse51_node_put(pse51_node_t *node);
+int pse51_node_put(pse51_node_t *node);
 
 /* Remove the binding of a node to its name, if the node is still referenced,
    real destruction is deferred until the last call to node_put. */
 int pse51_node_remove(pse51_node_t **nodep, const char *name, unsigned magic);
 
+#define PSE51_NODE_REMOVED 2
 
+#define pse51_node_ref_p(node) ((node)->refcount)
+
+#define pse51_node_removed_p(node) \
+    ((node)->flags & PSE51_NODE_REMOVED && !pse51_node_ref_p(node))
 
 /* A pse51_desc_t is the structure associated with a descriptor.  */
 typedef struct pse51_desc {
