@@ -1,3 +1,8 @@
+2005-08-14  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
+
+	* skins/posix/sem.c (sem_open, sem_close, sem_unlink): Add support
+	for named semaphores.
+
 2005-08-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
 
 	* arch/generic/hal/generic.c (xnlock_read_proc): Add spinlock
